--- a/Resources/Prototypes/_NF/Catalog/Fills/Lockers/locker_wallmount.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Lockers/locker_wallmount.yml
@@ -178,6 +178,16 @@
   id: LockerWallEVAColorNfsdFilled
   suffix: Filled
 
+- type: entity
+  parent: [ LockerWallEVAColorEmergency, StorageFillEVASuitEmergency ]
+  id: LockerWallEVAColorEmergencyFilled
+  suffix: Frontier, Filled
+
+- type: entity
+  parent: [ LockerWallEVAColorLvhi, StorageFillEVASuitLvhi ]
+  id: LockerWallEVAColorLvhiFilled
+  suffix: Frontier, Filled
+
 # Emergency
 - type: entity
   parent: [ ClosetWallN2, StorageFillN2Random ]
