--- a/Resources/Prototypes/_NF/Entities/Structures/base_structure.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/base_structure.yml
@@ -74,17 +74,23 @@
         damage: 0
 
 - type: entity
+  parent: BaseStructureDisableAnchoring
   id: BaseStructureWallmount
   abstract: true
+  placement:
+    mode: SnapgridCenter
+    snap:
+      - Wallmount
   components:
   - type: Sprite
     drawdepth: WallMountedItems
     snapCardinals: false
   - type: WallMount
-    arc: 180
+    arc: 175
   - type: Transform
     noRot: false
   - type: Physics
+    bodyType: Static
     canCollide: false
   - type: Fixtures
     fixtures: {}
