--- a/Resources/Maps/Corvax/Shuttles/Expedition/ZaryaAssault.yml
+++ b/Resources/Maps/Corvax/Shuttles/Expedition/ZaryaAssault.yml
@@ -1847,8 +1847,6 @@ entities:
     components:
     - type: Transform
       parent: 50
-    - type: Physics
-      canCollide: False
 - proto: AmeShielding
   entities:
   - uid: 53
@@ -5483,25 +5481,17 @@ entities:
           - 673
           - 675
           - 676
-        paper_label: !type:ContainerSlot
-          showEnts: False
-          occludes: True
-          ent: null
 - proto: ClothingEyesBlindfold
   entities:
   - uid: 671
     components:
     - type: Transform
       parent: 670
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
   - uid: 672
     components:
     - type: Transform
       parent: 670
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
 - proto: ClothingMaskMuzzle
   entities:
@@ -5509,15 +5499,11 @@ entities:
     components:
     - type: Transform
       parent: 670
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
   - uid: 674
     components:
     - type: Transform
       parent: 670
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
 - proto: ClothingOuterHardsuitMercenary
   entities:
@@ -5537,8 +5523,6 @@ entities:
     components:
     - type: Transform
       parent: 670
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
 - proto: ClothingUniformJumpskirtSec
   entities:
@@ -5549,8 +5533,6 @@ entities:
       name: комбинезон vitezstvi (боецка)
     - type: Transform
       parent: 1170
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
 - proto: ClothingUniformJumpsuitBrigmedic
   entities:
@@ -5561,8 +5543,6 @@ entities:
       name: комбинезон vitezstvi (военный врач)
     - type: Transform
       parent: 1170
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
 - proto: ClothingUniformJumpsuitHoS
   entities:
@@ -5573,8 +5553,6 @@ entities:
       name: комбинезон vitezstvi (командира отряда)
     - type: Transform
       parent: 1170
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
 - proto: ClothingUniformJumpsuitPrisoner
   entities:
@@ -5582,8 +5560,6 @@ entities:
     components:
     - type: Transform
       parent: 670
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
 - proto: ClothingUniformJumpsuitSec
   entities:
@@ -5594,8 +5570,6 @@ entities:
       name: комбинезон vitezstvi (боец)
     - type: Transform
       parent: 1170
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
   - uid: 1767
     components:
@@ -5604,8 +5578,6 @@ entities:
       name: комбинезон vitezstvi (боец)
     - type: Transform
       parent: 1170
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
   - uid: 1769
     components:
@@ -5614,8 +5586,6 @@ entities:
       name: комбинезон vitezstvi (боец)
     - type: Transform
       parent: 1170
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
 - proto: ClothingUniformJumpsuitSeniorOfficer
   entities:
@@ -5626,8 +5596,6 @@ entities:
       name: комбинезон vitezstvi (пилот)
     - type: Transform
       parent: 1170
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
 - proto: Cobweb1
   entities:
@@ -5803,10 +5771,6 @@ entities:
           - 1718
           - 1717
           - 1716
-        paper_label: !type:ContainerSlot
-          showEnts: False
-          occludes: True
-          ent: null
 - proto: CrateSecureMercenaryHardsuit
   entities:
   - uid: 1170
@@ -5847,10 +5811,6 @@ entities:
           - 1765
           - 1767
           - 1768
-        paper_label: !type:ContainerSlot
-          showEnts: False
-          occludes: True
-          ent: null
     - type: Pullable
       prevFixedRotation: True
 - proto: DefibrillatorCabinetFilled
@@ -5872,22 +5832,16 @@ entities:
     components:
     - type: Transform
       parent: 1715
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
   - uid: 1719
     components:
     - type: Transform
       parent: 1715
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
   - uid: 1720
     components:
     - type: Transform
       parent: 1715
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
 - proto: DrinkBeerglass
   entities:
@@ -5895,15 +5849,11 @@ entities:
     components:
     - type: Transform
       parent: 1715
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
   - uid: 1717
     components:
     - type: Transform
       parent: 1715
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
 - proto: DrinkKegWood
   entities:
@@ -5912,6 +5862,10 @@ entities:
     - type: Transform
       pos: 11.548131,2.545815
       parent: 2
+    - type: ItemSlots
+    - type: ContainerContainer
+      containers:
+        paper_label: !type:ContainerSlot {}
 - proto: DrinkVodkaBottleFull
   entities:
   - uid: 975
@@ -6228,7 +6182,7 @@ entities:
       pos: -3.5,-8.5
       parent: 2
     - type: Door
-      secondsUntilStateChange: -21609.893
+      secondsUntilStateChange: -21516.627
       state: Closing
   - uid: 749
     components:
@@ -6249,7 +6203,7 @@ entities:
       pos: 4.5,-6.5
       parent: 2
     - type: Door
-      secondsUntilStateChange: -23111.9
+      secondsUntilStateChange: -23018.635
       state: Closing
   - uid: 752
     components:
@@ -8352,10 +8306,6 @@ entities:
           occludes: True
           ents:
           - 1667
-        paper_label: !type:ContainerSlot
-          showEnts: False
-          occludes: True
-          ent: null
     - type: Pullable
       prevFixedRotation: True
   - uid: 1745
@@ -8389,10 +8339,6 @@ entities:
           ents:
           - 1798
           - 1799
-        paper_label: !type:ContainerSlot
-          showEnts: False
-          occludes: True
-          ent: null
 - proto: Gyroscope
   entities:
   - uid: 689
@@ -8421,15 +8367,11 @@ entities:
     components:
     - type: Transform
       parent: 1069
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
   - uid: 1134
     components:
     - type: Transform
       parent: 1131
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
 - proto: KitchenMicrowave
   entities:
@@ -8485,10 +8427,6 @@ entities:
           ents:
           - 1070
           - 1121
-        paper_label: !type:ContainerSlot
-          showEnts: False
-          occludes: True
-          ent: null
   - uid: 1131
     components:
     - type: Transform
@@ -8520,10 +8458,6 @@ entities:
           ents:
           - 1134
           - 1148
-        paper_label: !type:ContainerSlot
-          showEnts: False
-          occludes: True
-          ent: null
 - proto: LockerParamedicFilledHardsuit
   entities:
   - uid: 198
@@ -8683,15 +8617,11 @@ entities:
     components:
     - type: Transform
       parent: 1069
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
   - uid: 1148
     components:
     - type: Transform
       parent: 1131
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
   - uid: 1265
     components:
@@ -9303,7 +9233,7 @@ entities:
     - type: Transform
       pos: -11.5,-6.5
       parent: 2
-- proto: RandomPosterContraband
+- proto: RandomPosterContrabandDeadDrop
   entities:
   - uid: 1780
     components:
@@ -9622,14 +9552,10 @@ entities:
     components:
     - type: Transform
       parent: 1585
-    - type: Physics
-      canCollide: False
   - uid: 1664
     components:
     - type: Transform
       parent: 1663
-    - type: Physics
-      canCollide: False
 - proto: ShuttleSMGRifle
   entities:
   - uid: 197
@@ -9638,24 +9564,6 @@ entities:
       rot: -1.5707963267948966 rad
       pos: -8.5,10.5
       parent: 2
-    - type: ContainerContainer
-      containers:
-        machine_board: !type:Container
-          showEnts: False
-          occludes: True
-          ents: []
-        machine_parts: !type:Container
-          showEnts: False
-          occludes: True
-          ents: []
-        ballistic-ammo: !type:Container
-          showEnts: False
-          occludes: True
-          ents: []
-        gun_magazine: !type:ContainerSlot
-          showEnts: False
-          occludes: True
-          ent: null
     missingComponents:
     - Anchorable
     - Construction
@@ -9790,6 +9698,14 @@ entities:
     - type: Transform
       pos: -8.5,-8.5
       parent: 2
+- proto: SignMinerDock
+  entities:
+  - uid: 1140
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 2.5,-11.5
+      parent: 2
 - proto: SignSecure
   entities:
   - uid: 1142
@@ -9805,14 +9721,6 @@ entities:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 9.5,3.5
-      parent: 2
-- proto: SignShipDock
-  entities:
-  - uid: 1140
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 2.5,-11.5
       parent: 2
 - proto: SignSmoking
   entities:
@@ -12784,30 +12692,24 @@ entities:
     - type: Transform
       pos: -9.536149,8.404913
       parent: 2
-- proto: WeaponRifleSVT
-  entities:
-  - uid: 1667
-    components:
-    - type: Transform
-      parent: 987
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
 - proto: WeaponShotgunKS23
   entities:
   - uid: 1798
     components:
     - type: Transform
       parent: 1745
-    - type: Physics
-      canCollide: False
     - type: InsideEntityStorage
   - uid: 1799
     components:
     - type: Transform
       parent: 1745
-    - type: Physics
-      canCollide: False
+    - type: InsideEntityStorage
+- proto: WeaponSVT
+  entities:
+  - uid: 1667
+    components:
+    - type: Transform
+      parent: 987
     - type: InsideEntityStorage
 - proto: WindoorSecure
   entities:
