Remove curse from the golden mask.

--- a/Resources/Prototypes/Entities/Clothing/Masks/specific.yml
+++ b/Resources/Prototypes/Entities/Clothing/Masks/specific.yml
@@ -88,12 +88,12 @@
   - type: Tag
     tags: [] # ignore "WhitelistChameleon" tag
   - type: SelfEquipOnly
-  - type: CursedMask
-    despairDamageModifier:
-      coefficients:
-        Blunt: 0.6
-        Slash: 0.6
-        Piercing: 0.4
+  #- type: CursedMask # Frontier change, too much trouble for something that can insta-ghost you for wearing it.
+  #  despairDamageModifier:
+  #    coefficients:
+  #      Blunt: 0.6
+  #      Slash: 0.6
+  #      Piercing: 0.4
   - type: HideLayerClothing
     slots:
     - Snout
