remove mask from the loot tables

--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/Salvage/tables_loot.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/Salvage/tables_loot.yml
@@ -154,7 +154,7 @@
   id: SalvageTreasureLegendary
   table: !type:GroupSelector
     children:
-    - id: ClothingMaskGoldenCursed
+    # - id: ClothingMaskGoldenCursed # Frontier
     - id: ClothingHeadHatFancyCrown
     - id: GoldenBikeHorn
     - id: ClothingHeadHatCatEars
