--- a/Resources/Changelog/Frontier.yml
+++ b/Resources/Changelog/Frontier.yml
@@ -3274,7 +3274,7 @@ Entries:
         when taking or leaving a ghost role.
       type: Tweak
     - message: >-
-        When entering cryo, your respawn timer is reduced (default 30 seconds). 
+        When entering cryo, your respawn timer is reduced (default 30 seconds).
         If you re-enter, you will receive a longer timer.
       type: Tweak
   id: 5242
@@ -5109,9 +5109,8 @@ Entries:
   changes:
     - type: Add
       message: >-
-        New massive dungeon asteroids were added, keep an eye out for them on
-        radar and be informed about them on supply radio, be prepared for a
-        fight, they showup on a new event loop every 30 minutes, and last that duration.
+        Added new massive dungeon asteroids - they last 30 minutes, spawn every 35-40 minutes,
+        and are announced on Supply radio.
     - type: Tweak
       message: >-
         The cooldown on expedition FTL has been extended to 20 minutes, you will now need to
